# natrix

./: .earthlyignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE.md  README.md  THIRD_PARTY_LICENSES_CLI.html  about.hbs  about.toml  flake.nix  justfile  rustfmt.toml  test.md  test_derive_macro.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
ci/benchmark/: Cargo.toml
ci/benchmark/src/: lib.rs  main.rs  runtime.rs
ci/integration_tests/: Cargo.toml  Earthfile
ci/integration_tests/src/: main.rs
ci/stress_test_binary_size/: Cargo.toml
ci/stress_test_binary_size/src/: main.rs
crates/natrix/: Cargo.toml  Earthfile  build.rs  deny.toml
crates/natrix-cli/: Cargo.toml  Earthfile  deny.toml
crates/natrix-cli/src/: dev_server.rs  main.rs  options.rs  project_gen.rs  utils.rs
crates/natrix/proptest-regressions/css/: mod.txt  values.txt
crates/natrix/src/: access.rs  async_utils.rs  error_handling.rs  lens.rs  lib.rs  panics.rs  test_utils.rs
crates/natrix/src/css/: keyframes.rs  mod.rs  property.rs  selectors.rs  stylesheet.rs  values.rs
crates/natrix/src/css/snapshots/: natrix__css__selectors__tests__BTN.and(PseudoClass::Hover).snap  natrix__css__selectors__tests__BTN.descendant(TagDiv.and(BTN)).snap  natrix__css__selectors__tests__BTN.snap  natrix__css__selectors__tests__PROFILE.after().snap  natrix__css__selectors__tests__PROFILE.snap  natrix__css__selectors__tests__TagDiv.after().snap  natrix__css__selectors__tests__TagDiv.and(BTN).descendant(BTN).snap  natrix__css__selectors__tests__TagDiv.and(BTN).snap  natrix__css__selectors__tests__TagDiv.and(PROFILE).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClass::NthChild(NthArgument::new(2, 3).of(BTN))).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClassNested::Has(BTN)).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClassNested::Has(selector_list![BTN, TagDiv])).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClassNested::HasWithCombinator(Combinator::DirectChild, BTN)).snap  natrix__css__selectors__tests__TagDiv.child(BTN).snap  natrix__css__selectors__tests__TagDiv.descendant(BTN).before().snap  (+19 more)
crates/natrix/src/dom/: attributes.rs  classes.rs  element.rs  events.rs  html_elements.rs  list.rs  mod.rs
crates/natrix/src/reactivity/: component.rs  mod.rs  mount.rs  non_reactive.rs  render_callbacks.rs  signal.rs  state.rs  statics.rs
crates/natrix/tests/: root.rs
crates/natrix/tests/actual_tests/: async_callbacks.rs  attributes.rs  classes.rs  computed.rs  derive_macros.rs  events.rs  generic_component.rs  guards.rs  loops.rs  mod.rs  nested_reactivity.rs  performance_hits.rs  simple_reactivty.rs  simple_rendering.rs  sub_components.rs
crates/natrix_macros/: Cargo.toml
crates/natrix_macros/src/: component_impl.rs  formatting.rs  lib.rs  state.rs
dagger_pipeline/: Cargo.toml
dagger_pipeline/src/: base_images.rs  fix.rs  main.rs  report.rs  targets.rs
integration_tests/: Cargo.toml  index.html
integration_tests/src/: main.rs  reload_tests.rs
natrix/: .tmptt7nN2  Cargo.toml  build.rs  deny.toml
natrix-cli/: Cargo.toml  THIRD_PARTY_LICENSES_FRAMEWORK.html  deny.toml
natrix-cli/src/: dev_server.rs  main.rs  options.rs  project_gen.rs  utils.rs
natrix/src/: async_utils.rs  callbacks.rs  component.rs  css_values.rs  element.rs  error_handling.rs  events.rs  html_elements.rs  lib.rs  list.rs  panics.rs  render_callbacks.rs  signal.rs  state.rs  test_utils.rs  type_macros.rs  utils.rs  web_utils.rs
natrix/src/css/: mod.rs  selectors.rs  stylesheet.rs  values.rs
natrix/src/css/snapshots/: natrix__css__selectors__tests__BTN.and(PseudoClass::Hover).snap  natrix__css__selectors__tests__BTN.descendant(TagDiv.and(BTN)).snap  natrix__css__selectors__tests__BTN.snap  natrix__css__selectors__tests__PROFILE.snap  natrix__css__selectors__tests__PseudoClass::Hover.snap  natrix__css__selectors__tests__TagDiv.and(BTN).descendant(BTN).snap  natrix__css__selectors__tests__TagDiv.and(BTN).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClass::Has(selector_list!(BTN))).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClass::NthChild(NthArgument::new(2, 3))).snap  natrix__css__selectors__tests__TagDiv.and(PseudoClass::NthChild(NthArgument::new(2, 3).of(BTN))).snap  natrix__css__selectors__tests__TagDiv.descendant(PseudoClass::Hover).snap  natrix__css__selectors__tests__TagDiv.descendant(TagDiv).descendant(TagDiv).snap  natrix__css__selectors__tests__TagDiv.next_sibling(BTN).snap  natrix__css__selectors__tests__TagDiv.subsequent_sibling(BTN).snap  natrix__css__values__tests__hsl_blue.snap  natrix__css__values__tests__hsl_gray.snap  natrix__css__values__tests__hsl_green.snap  natrix__css__values__tests__hsl_red.snap  natrix__css__values__tests__oklch_a_full_alpha.snap  natrix__css__values__tests__oklch_a_zero_alpha.snap  natrix__css__values__tests__oklch_low_lightness.snap  natrix__css__values__tests__oklch_mid_lightness.snap  natrix__css__values__tests__rgb_black.snap  natrix__css__values__tests__rgb_blue.snap  natrix__css__values__tests__rgb_green.snap  natrix__css__values__tests__rgb_red.snap  natrix__css__values__tests__rgba_full_alpha.snap  natrix__css__values__tests__rgba_half_alpha.snap  natrix__css__values__tests__rgba_zero_alpha.snap  natrix__css__values__tests__with_alpha_oklch.snap
natrix/src/dom/: attributes.rs  classes.rs  element.rs  events.rs  html_elements.rs  list.rs  mod.rs
natrix/src/reactivity/: async_utils.rs  callbacks.rs  component.rs  mod.rs  non_reactive.rs  render_callbacks.rs  signal.rs  state.rs
natrix/tests/: attributes.rs  generic_component.rs  nested_reactivity.rs  root.rs  simple_reactivty.rs  simple_rendering.rs
natrix/tests/actual_tests/: async_callbacks.rs  attributes.rs  classes.rs  computed.rs  css_vars.rs  events.rs  generic_component.rs  guards.rs  loops.rs  mod.rs  nested_reactivity.rs  simple_reactivty.rs  simple_rendering.rs  sub_components.rs
natrix_macros/: Cargo.toml  build.rs
natrix_macros/src/: component_impl.rs  lib.rs
stress_test_binary_size/: Cargo.toml
stress_test_binary_size/src/: main.rs
(+103 files in other folders)
