[workspace]
resolver = "2"
members = [
    "natrix_shared",
    "natrix_macros",
    "natrix",
    "natrix-cli",
    "integration_tests",
    "integration_tests_dependency",
    "stress_test_binary_size", "benchmark",
]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[workspace.lints.rust]
missing_docs = "warn"
private_interfaces = { level = "allow"}
private_bounds = { level = "allow"}
unfulfilled_lint_expectations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = {level = "warn", priority = 1}
todo = "deny"
unreachable = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
expect_used = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
missing_docs_in_private_items = "warn"
type_complexity = { level = "allow" }
panic = { level = "deny", priority = 0 }

