[workspace]
resolver = "3"
members = [
    "crates/natrix_shared",
    "crates/natrix_macros",
    "crates/natrix",
    "crates/natrix-cli",
    "ci/integration_tests",
    "ci/integration_tests_dependency",
    # "ci/benchmark", 
    "dagger_pipeline",
]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[workspace.lints.rust]
missing_docs = "warn"
private_interfaces = { level = "allow"}
private_bounds = { level = "allow"}
unfulfilled_lint_expectations = "warn"
unsafe_code = "deny"

# https://github.com/proptest-rs/proptest/issues/447
non_local_definitions = "allow"

[workspace.lints.clippy]
pedantic = {level = "warn", priority = 1}
todo = "deny"
unreachable = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
expect_used = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
missing_docs_in_private_items = "warn"
type_complexity = "allow"
panic = { level = "deny", priority = 0 }
