[package]
name = "dagger_pipeline"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# CLI
clap = { version = "4.5.47", features = ["derive"] }
eyre = "0.6.12"

# CI/CD
# Dagger does breaking changes in patch versions...
# https://github.com/dagger/dagger/releases/tag/v0.18.17
dagger-sdk = "=0.18.16"

# Async
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"

# Utilities
itertools = "0.14.0"
uuid = { version = "1.18.1", features = ["v4"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[lints]
workspace = true
