[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.natrix]
base_path = "/dist"

[dependencies]
natrix = {path = "../natrix"}
integration_tests_dependency = {path = "../integration_tests_dependency"}

[dev-dependencies]
thirtyfour = { version = "0.35.0", default-features = false , features=["reqwest"]}
tokio = { version = "1.44.1", default-features = false, features = ["rt", "macros"] }

