[package]
name = "natrix-cli"
version = "0.2.0"
edition = "2024"

[dependencies]
natrix_shared = {path = "../natrix_shared", version="0.2.0"}

anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
indicatif = "0.17.11"
owo-colors = { version = "4.2.0", default-features = false }
notify = "8.0.0"
tiny_http = "0.12.0"
oxc = {version="0.63.0", default-features=false, features=["minifier", "codegen"]}
lightningcss = { version = "1.0.0-alpha.65", default-features = false, features = ["grid", "visitor"] }
wasm-opt = { version = "0.116.1", optional = true }
wasmparser = "0.228"
rustc_version = "0.4.1"

[[bin]]
name = "natrix"
path = "src/main.rs"

[features]
bundle-wasm-opt = ["dep:wasm-opt"]
