[package]
name = "natrix-cli"
version = "1.0.0"
edition = "2024"
description = "Natrix CLI tool."
license-file = "../LICENSE.md"
include = ["src", "THIRD_PARTY_LICENSES*"]

[lints]
workspace = true

[dependencies]
natrix_shared = {path = "../natrix_shared", version="1.0.0", features=["macros"]}

anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
indicatif = "0.17.11"
owo-colors = { version = "4.2.0", default-features = false }
notify = "8.0.0"
tiny_http = "0.12.0"
oxc = {version="0.69.0", default-features=false, features=["minifier", "codegen"]}
lightningcss = { version = "1.0.0-alpha.66", default-features = false, features = ["visitor"] }
wasmparser = "0.230"
rustc_version = "0.4.1"
cargo_metadata = "0.19.2"
tungstenite = { version = "0.26.2" }
data-encoding = {version="2.9.0", default-features = false, features = ["alloc"]}
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "natrix"
path = "src/main.rs"
