[package]
name = "natrix"
version = "1.0.0"
edition = "2024"

description = "Rust-First frontend framework."
license = "MIT"
repository = "https://github.com/vivax3794/natrix"
keywords = ["frontend", "framework", "web", "wasm"]
categories = ["gui", "wasm", "web-programming"]

readme = "../README.md"
exclude = ["tests"]

[lints]
workspace = true

[dependencies]
natrix_macros = {path = "../natrix_macros", version="1.0.0"}
natrix_shared = {path = "../natrix_shared", version="1.0.0"}

# Default
wasm-bindgen = {version= "0.2.100", features=["enable-interning"]}
itoa = "1.0.14"
ryu = "1.0.0"
slotmap = "1.0.6"

# Async
wasm-bindgen-futures = { version = "0.4.50" }
futures-channel = { version = "0.3.31" }
futures-util = { version = "0.3.31", default-features = false}
futures-core = { version = "0.3.31", default-features = false}
ouroboros = { version = "0.18.0" }

# Other
either = { version = "1.0.0", optional = true, default-features = false }
paste = "1.0.15"

[features]
default = ["panic_hook", "scoped_css", "inline_css", "assets"]
scoped_css = ["natrix_macros/scoped_css"]
inline_css = ["natrix_macros/inline_css"]
assets = ["natrix_macros/assets"]
panic_hook = ["web-sys/console"]

nightly = []
ergonomic_ops = []

test_utils = []

either = ["dep:either"]

[dev-dependencies]
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
wasm-bindgen-test = {version="0.3.50"}
getrandom = { version = "0.2.0", features = ["js"] }

[build-dependencies]
rustversion = "1.0.19"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Comment",
    "Text",
    "Document",
    "Window",
    "HtmlElement",
    "DomTokenList",
    "DocumentFragment",
    "CssStyleDeclaration",

    # Events
    "Event",
    "AnimationEvent",
    "BeforeUnloadEvent",
    "BlobEvent",
    "ClipboardEvent",
    "CloseEvent",
    "CompositionEvent",
    "DeviceMotionEvent",
    "DeviceOrientationEvent",
    "DragEvent",
    "ErrorEvent",
    "FetchEvent",
    "FocusEvent",
    "FontFaceSetLoadEvent",
    # "FormDataEvent",
    "GamepadEvent",
    "HashChangeEvent",
    # "HIDInputReportEvent",
    # "IDBVersionChangeEvent",
    "InputEvent",
    "KeyboardEvent",
    "MessageEvent",
    "MouseEvent",
    "OfflineAudioCompletionEvent",
    "PageTransitionEvent",
    "PaymentRequestUpdateEvent",
    "PointerEvent",
    "PopStateEvent",
    "ProgressEvent",
    # "RTCDataChannelEvent",
    # "RTCPeerConnectionIceEvent",
    "StorageEvent",
    "SubmitEvent",
    "TimeEvent",
    "TouchEvent",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    # "WebGLContextEvent",
    "WheelEvent"
]

