[package]
name = "natrix"
version = "0.3.0"
edition = "2024"

description = "Rust-First frontend framework."
license = "MIT"
repository = "https://github.com/vivax3794/natrix"
keywords = ["frontend", "framework", "web", "wasm"]
categories = ["gui", "wasm", "web-programming"]

readme = "../README.md"
exclude = ["tests"]

[lints]
workspace = true

[dependencies]
natrix_macros = {path = "../natrix_macros", version="0.3.0"}
natrix_shared = {path = "../natrix_shared", version="0.3.0"}

# Default
wasm-bindgen = {version= "0.2.100", features=["enable-interning"]}
itoa = "1.0.14"
ryu = "1.0.0"
slotmap = "1.0.6"

# Async
wasm-bindgen-futures = { version = "0.4.50" }
futures-channel = { version = "0.3.31" }
futures-util = { version = "0.3.31", default-features = false}
futures-core = { version = "0.3.31", default-features = false}
ouroboros = { version = "0.18.0" }

# Other
pastey = "0.1"
pin-project = { version = "1.1.10" }
smallvec = "1.15.0"
const_base = "0.2.0"
const-sha1 = { version = "0.3.0", default-features = false }

inventory = {version="0.3", optional = true}

[features]
default = []
keep_console_in_release = []

nightly = ["natrix_macros/nightly"]
ergonomic_ops = []

test_utils = []

_internal_collect_css = ["dep:inventory"]
_internal_runtime_css = ["_internal_collect_css"]
_internal_extract_css = ["_internal_collect_css"]

[dev-dependencies]
wasm-bindgen-test ="0.3.50"
static_assertions = "1"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
lightningcss = { version = "1.0.0-alpha.66", default-features = false }
proptest = "1.6"
insta = "1.43"

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"]

[build-dependencies]
rustversion = "1.0.19"
natrix_shared = {path = "../natrix_shared", version="0.3.0"}

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Comment",
    "Text",
    "Document",
    "Window",
    "HtmlElement",
    "DomTokenList",
    "DocumentFragment",
    "CssStyleDeclaration",
    "console",

    # Events
    "Event",
    "AnimationEvent",
    "BeforeUnloadEvent",
    "BlobEvent",
    "ClipboardEvent",
    "CloseEvent",
    "CompositionEvent",
    "DeviceMotionEvent",
    "DeviceOrientationEvent",
    "DragEvent",
    "ErrorEvent",
    "FetchEvent",
    "FocusEvent",
    "FontFaceSetLoadEvent",
    # "FormDataEvent",
    "GamepadEvent",
    "HashChangeEvent",
    # "HIDInputReportEvent",
    # "IDBVersionChangeEvent",
    "InputEvent",
    "KeyboardEvent",
    "MessageEvent",
    "MouseEvent",
    "OfflineAudioCompletionEvent",
    "PageTransitionEvent",
    "PaymentRequestUpdateEvent",
    "PointerEvent",
    "PopStateEvent",
    "ProgressEvent",
    # "RTCDataChannelEvent",
    # "RTCPeerConnectionIceEvent",
    "StorageEvent",
    "SubmitEvent",
    "TimeEvent",
    "TouchEvent",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    # "WebGLContextEvent",
    "WheelEvent"
]

