[package]
name = "natrix_macros"
version = "1.0.0"
edition = "2024"

description = "Macros for natrix"
license = "MIT"
repository = "https://github.com/vivax3794/natrix"

[lib]
proc-macro = true

[build-dependencies]
natrix_shared = {path = "../natrix_shared", version="1.0.0"}

[dependencies]
natrix_shared = {path = "../natrix_shared", version="1.0.0"}

convert_case = "0.8.0"
lightningcss = { version = "1.0.0-alpha.65", default-features = false, features = ["grid"] }
ahash = "0.8.11"
data-encoding = "2.9.0"

proc-macro2 = {version="1.0.83", default-features = false}
quote = {version="1.0.35", default-features = false}
syn = { version = "2.0.87", default-features = false, features=["derive", "proc-macro", "parsing", "printing", "full", "clone-impls"]}
template-quote = "0.4.0"

