[package]
name = "natrix_macros"
version = "1.0.0"
edition = "2024"

description = "Macros for natrix"
license = "MIT"
repository = "https://github.com/vivax3794/natrix"

[lints]
workspace = true

[lib]
proc-macro = true

[build-dependencies]
natrix_shared = {path = "../natrix_shared", version="1.0.0"}

[dependencies]
natrix_shared = {path = "../natrix_shared", version="1.0.0"}

convert_case = {version="0.8.0", default-features = false, optional = true}
lightningcss = { version = "1.0.0-alpha.65", default-features = false, features = ["grid"], optional = true }
data-encoding = {version="2.9.0", optional = true, default-features = false, features = ["alloc"]}

proc-macro2 = {version="1.0.83", default-features = false}
quote = {version="1.0.35"}
syn = { version = "2.0.87", default-features = false, features=["proc-macro", "parsing", "printing", "full"]}

[features]
scoped_css = ["dep:lightningcss", "dep:convert_case"]
inline_css = ["dep:data-encoding"]
assets = ["dep:data-encoding", "natrix_shared/assets"]
nightly = []
