[package]
name = "natrix_macros"
version = "0.3.0"
edition = "2024"

description = "Macros for natrix"
license = "MIT"
repository = "https://github.com/vivax3794/natrix"

[lints]
workspace = true

[lib]
proc-macro = true

[build-dependencies]
natrix_shared = {path = "../natrix_shared", version="0.3.0"}

[dependencies]
natrix_shared = {path = "../natrix_shared", version="0.3.0", features=["macros"]}

data-encoding = {version="2.9.0", default-features = false, features = ["alloc"]}

proc-macro2 = {version="1.0.83", default-features = false}
quote = {version="1.0.35", default-features = false}
syn = { version = "2.0.87", default-features = false}

[features]
nightly = []
