
[package]
name = "stress_test_binary_size"
version = "0.1.0"
edition = "2024"

[dependencies]
natrix = { path="../natrix", features = ["nightly"] }
log = {version = "*", features=["release_max_level_off"]}

[package.metadata.natrix]
cache_bust = "none"

[features]
__natrix_internal_extract_css = ["natrix/_internal_extract_css"]
__natrix_internal_runtime_css = ["natrix/_internal_runtime_css"]
