[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
natrix = { path="../../crates/natrix", features = ["test_utils", "async_utils"] }
log = {version = "0.4", features = ["release_max_level_off"]}
wasm-bindgen-test = "0.3.50"
web-sys = {version="0.3.77", features=["Performance"]}
pastey = "0.1.0"
