[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.natrix]
base_path = "/dist"
cache_bust = "none"

[dependencies]
# Framework
natrix = { path = "../../crates/natrix", features = ["default_app"] }
integration_tests_dependency = { path = "../integration_tests_dependency" }

# Logging
log = { version = "0.4.27", features = ["max_level_trace"] }

[dev-dependencies]
# Testing
thirtyfour = { version = "0.35.0", default-features = false, features = ["reqwest", "rustls-tls"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "macros"] }

[features]
build_test = []

__natrix_internal_bundle = ["natrix/_internal_bundle"]
__natrix_internal_no_ssg = ["natrix/_internal_no_ssg"]

