
[package]
name = "stress_test_binary_size"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
natrix = { path="../../crates/natrix", features = ["nightly"] }
log = {version = "*", features=["release_max_level_off"]}

[package.metadata.natrix]
cache_bust = "none"

[features]
__natrix_internal_bundle = ["natrix/_internal_bundle"]
__natrix_internal_no_ssg = ["natrix/_internal_no_ssg"]
