[package]
name = "natrix-cli"
version = "0.3.0"
edition = "2024"
description = "Natrix CLI tool."
license = "MIT"
include = ["src"]

[lints]
workspace = true

[dependencies]
natrix_shared = {path = "../natrix_shared", version="0.3.0", features=["macros"]}

anyhow = {version="1.0.97", default-features = false}
clap = { version = "4.5.34", features = ["derive"], default-features = true}
indicatif = "0.18.0"
owo-colors = { version = "4.2.0", default-features = false }
notify = "8.0.0"
tiny_http = "0.12.0"
oxc = {version="0.79.0", default-features=false, features=["minifier", "codegen", "ast_visit"]}
lightningcss = { version = "1.0.0-alpha.66", default-features = false, features = ["visitor"] }
wasmparser = {version="0.236", features=[], default-features = false}
rustc_version = "0.4.1"
cargo_metadata = "0.21"
tungstenite = { version = "0.27" }
data-encoding = {version="2.9.0", default-features = false, features = ["alloc"]}
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sourcemap = "9.2.2"
gimli = { version = "0.32.0", default-features = false, features = ["read", "read-all"] }
semver = { version = "1.0.26", default-features = false }


[[bin]]
name = "natrix"
path = "src/main.rs"
