[package]
name = "natrix-cli"
version = "0.3.0"
edition = "2024"
description = "Natrix CLI tool."
license = "MIT"
include = ["src"]

[lints]
workspace = true

[dependencies]
# Framework
natrix_shared = { path = "../natrix_shared", version = "0.3.0", features = ["macros"] }

# CLI
clap = { version = "4.5.47", features = ["derive"], default-features = true }
indicatif = "0.18.0"
owo-colors = { version = "4.2.2", default-features = false }
anyhow = { version = "1.0.99", default-features = false }

# Build Tools
oxc = { version = "0.85.0", default-features = false, features = ["minifier", "codegen", "ast_visit"] }
lightningcss = { version = "1.0.0-alpha.67", default-features = false, features = ["visitor"] }
wasmparser = { version = "0.239.0", features = [], default-features = false }
rustc_version = "0.4.1"
cargo_metadata = "0.22.0"
gimli = { version = "0.32.2", default-features = false, features = ["read", "read-all"] }
sourcemap = "9.2.2"
data-encoding = { version = "2.9.0", default-features = false, features = ["alloc"] }
semver = { version = "1.0.26", default-features = false }

# Dev Server
notify = "8.2.0"
tiny_http = "0.12.0"
tungstenite = { version = "0.27.0" }
ignore = "0.4.23"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"


[[bin]]
name = "natrix"
path = "src/main.rs"
