[package]
name = "natrix"
version = "0.3.0"
edition = "2024"

description = "Rust-First frontend framework."
license = "MIT"
repository = "https://github.com/vivax3794/natrix"
keywords = ["frontend", "framework", "web", "wasm"]
categories = ["gui", "wasm", "web-programming"]

readme = "../../README.md"
exclude = ["tests"]

[lints]
workspace = true

[dependencies]
# Natrix
natrix_macros = {path = "../natrix_macros", version="0.3.0"}
natrix_shared = {path = "../natrix_shared", version="0.3.0"}

# Core
wasm-bindgen = {version= "0.2.100", features=["enable-interning", "msrv", "std"], default-features=false}
itoa = "1.0.15"
ryu = "1.0.0"
slotmap = {version="1.0.6", default-features = false}
pastey = "0.1"
smallvec = "1.15.0"

# Async
wasm-bindgen-futures = { version = "0.4.50", default-features = false, optional = true}
futures-channel = { version = "0.3.31", optional = true}
pin-project = { version = "1.1.10", optional = true}

# Css
const_base = "0.2.0"
const-sha1 = { version = "0.3.0", default-features = false }
inventory = {version="0.3", optional = true}

# Logging
log = "0.4"
console_log = {version = "1.0", optional=true, features=["color"]}
simple_logger = {version="5.0", features=["stderr"], default-features=false, optional=true}

# Other
cfg-if = "1.0.0"
indexmap = "2.9.0"

[features]
default_app = ["console_log", "async", "performance_lints"]

nightly = ["natrix_macros/nightly"]
ergonomic_ops = []
console_log = ["dep:console_log"]
async = ["dep:pin-project", "dep:wasm-bindgen-futures"]
async_utils = ["async", "dep:futures-channel"]

test_utils = ["web-sys/console"]

performance_lints = ["_internal_performance_checks"]

_internal_performance_checks = []
_internal_testing = ["test_utils", "_internal_performance_checks"]
_internal_collect_css = ["dep:inventory"]
_internal_no_ssg = ["_internal_collect_css"]
_internal_bundle = ["_internal_collect_css", "dep:simple_logger"]

[dev-dependencies]
wasm-bindgen-test ="0.3.50"
static_assertions = "1"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
lightningcss = { version = "1.0.0-alpha.66", default-features = false }
proptest = "1.6"
proptest-derive = "0.6.0"
insta = "1.43"

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"]

[build-dependencies]
rustversion = "1.0.19"
natrix_shared = {path = "../natrix_shared", version="0.3.0"}

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Comment",
    "Text",
    "Document",
    "Window",
    "HtmlElement",
    "DomTokenList",
    "DocumentFragment",
    "CssStyleDeclaration",

    # Events
    "Event",
    "AnimationEvent",
    "BeforeUnloadEvent",
    "BlobEvent",
    "ClipboardEvent",
    "CloseEvent",
    "CompositionEvent",
    "DeviceMotionEvent",
    "DeviceOrientationEvent",
    "DragEvent",
    "ErrorEvent",
    "FetchEvent",
    "FocusEvent",
    "FontFaceSetLoadEvent",
    # "FormDataEvent",
    "GamepadEvent",
    "HashChangeEvent",
    # "HIDInputReportEvent",
    # "IDBVersionChangeEvent",
    "InputEvent",
    "KeyboardEvent",
    "MessageEvent",
    "MouseEvent",
    "OfflineAudioCompletionEvent",
    "PageTransitionEvent",
    "PaymentRequestUpdateEvent",
    "PointerEvent",
    "PopStateEvent",
    "ProgressEvent",
    # "RTCDataChannelEvent",
    # "RTCPeerConnectionIceEvent",
    "StorageEvent",
    "SubmitEvent",
    "TimeEvent",
    "TouchEvent",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    # "WebGLContextEvent",
    "WheelEvent"
]

