[package]
name = "natrix_macros"
version = "0.3.0"
edition = "2024"

description = "Macros for natrix"
license = "MIT"
repository = "https://github.com/vivax3794/natrix"

[lints]
workspace = true

[lib]
proc-macro = true

[build-dependencies]
# Framework
natrix_shared = { path = "../natrix_shared", version = "0.3.0" }

[dependencies]
# Framework
natrix_shared = { path = "../natrix_shared", version = "0.3.0", features = ["macros"] }

# Proc Macros
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.106", default-features = false, features = ["full", "printing", "parsing", "proc-macro", "clone-impls"] }

# Utilities
data-encoding = { version = "2.9.0", default-features = false, features = ["alloc"] }
